--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: objective-c
 osx_image: xcode7.1
 env:
   matrix:
-    - PLATFORM=iOS
-    - PLATFORM=Mac
+    - PLATFORM=iOS SDK=iphonesimulator
+    - PLATFORM=Mac SDK=macosx
+before_script:
+  - set -o pipefail
 script:
-- set -o pipefail
-- cd Example/"$PLATFORM"
-- pod install
-- xctool -workspace Example.xcworkspace -scheme Example
+  - cd "Example/$PLATFORM"
+  - pod install
+  - xcodebuild -workspace Example.xcworkspace -scheme Example -sdk $SDK
