--- a/HCImage+BPG.xcodeproj/xcshareddata/xcschemes/HCImage+BPG Mac.xcscheme
+++ b/HCImage+BPG.xcodeproj/xcshareddata/xcschemes/HCImage+BPG Mac.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0710"
+   LastUpgradeVersion = "0720"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "006FC7871BF3747F009AA419"
-               BuildableName = "Example.app"
-               BlueprintName = "Example"
-               ReferencedContainer = "container:Example.xcodeproj">
+               BlueprintIdentifier = "00383E831C9468A4002321BA"
+               BuildableName = "HCImageBPG.framework"
+               BlueprintName = "HCImage+BPG Mac"
+               ReferencedContainer = "container:HCImage+BPG.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,20 +32,20 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "006FC79B1BF3747F009AA419"
-               BuildableName = "ExampleTests.xctest"
-               BlueprintName = "ExampleTests"
-               ReferencedContainer = "container:Example.xcodeproj">
+               BlueprintIdentifier = "00383E8C1C9468A4002321BA"
+               BuildableName = "HCImage+BPG Mac Tests.xctest"
+               BlueprintName = "HCImage+BPG Mac Tests"
+               ReferencedContainer = "container:HCImage+BPG.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "006FC7871BF3747F009AA419"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
-            ReferencedContainer = "container:Example.xcodeproj">
+            BlueprintIdentifier = "00383E831C9468A4002321BA"
+            BuildableName = "HCImageBPG.framework"
+            BlueprintName = "HCImage+BPG Mac"
+            ReferencedContainer = "container:HCImage+BPG.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -61,16 +61,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "006FC7871BF3747F009AA419"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
-            ReferencedContainer = "container:Example.xcodeproj">
+            BlueprintIdentifier = "00383E831C9468A4002321BA"
+            BuildableName = "HCImageBPG.framework"
+            BlueprintName = "HCImage+BPG Mac"
+            ReferencedContainer = "container:HCImage+BPG.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -80,16 +79,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "006FC7871BF3747F009AA419"
-            BuildableName = "Example.app"
-            BlueprintName = "Example"
-            ReferencedContainer = "container:Example.xcodeproj">
+            BlueprintIdentifier = "00383E831C9468A4002321BA"
+            BuildableName = "HCImageBPG.framework"
+            BlueprintName = "HCImage+BPG Mac"
+            ReferencedContainer = "container:HCImage+BPG.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
