--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,7 @@ language: objective-c
 osx_image: xcode7.1
 env:
   matrix:
-    - PLATFORM=iOS SDK=iphonesimulator
-    - PLATFORM=Mac SDK=macosx
-before_script:
-  - set -o pipefail
+    - FASTLANE_ENV=ios
+    - FASTLANE_ENV=mac
 script:
-  - cd "Example/$PLATFORM"
-  - pod install
-  - xcodebuild -workspace Example.xcworkspace -scheme Example -sdk $SDK
+  - bundle exec fastlane test --env $FASTLANE_ENV
