Add SCAN_XCARGS flag

--- a/fastlane/.env
+++ b/fastlane/.env
@@ -1,1 +1,3 @@
-PROJECT_NAME=HCImage+BPG
+SCAN_XCARGS="GCC_GENERATE_TEST_COVERAGE_FILES=YES GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES"
+
+HC_PROJECT_NAME=HCImage+BPG
