--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,15 @@ before_deploy:
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 deploy:
-  provider: releases
-  api_key: ${GITHUB_API_TOKEN}
-  file: HCImageBPG.framework.zip
-  skip_cleanup: true
-  on:
-    tags: true
+  - provider: releases
+    api_key: ${GITHUB_API_TOKEN}
+    file: HCImageBPG.framework.zip
+    skip_cleanup: true
+    on:
+      tags: true
+      repo: chuganzy/HCImage-BPG
+  - provider: script
+    script: bundle exec pod trunk push
+    on:
+      tags: true
+      repo: chuganzy/HCImage-BPG
